--- a/app/src/main/res/layout-land/create_delivery.xml
+++ b/app/src/main/res/layout-land/create_delivery.xml
@@ -12,11 +12,11 @@
         android:background="@drawable/round_corners"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.25"
-        app:layout_constraintHorizontal_bias="0.288"
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintHorizontal_bias="0.287"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.064"
+        app:layout_constraintVertical_bias="0.069"
         app:layout_constraintWidth_percent="0.35" />
 
     <EditText
@@ -29,11 +29,11 @@
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHeight_percent="0.11"
-        app:layout_constraintHorizontal_bias="0.189"
+        app:layout_constraintHeight_percent="0.12"
+        app:layout_constraintHorizontal_bias="0.201"
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toBottomOf="@+id/textID"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.039"
         app:layout_constraintWidth_percent="0.22" />
 
     <TextView
@@ -46,7 +46,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toTopOf="@+id/view2"
         app:layout_constraintVertical_bias="0.041"
@@ -60,12 +60,11 @@
         android:contentDescription="@string/qrScan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHeight_percent="0.11"
-        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintHeight_percent="0.12"
         app:layout_constraintStart_toEndOf="@+id/receivID"
         app:layout_constraintTop_toBottomOf="@+id/textID"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.05"
+        app:layout_constraintVertical_bias="0.037"
+        app:layout_constraintWidth_percent="0.055"
         app:srcCompat="@drawable/avatar" />
 
     <View
@@ -75,8 +74,8 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/round_corners"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.25"
-        app:layout_constraintHorizontal_bias="0.38"
+        app:layout_constraintHeight_percent="0.4"
+        app:layout_constraintHorizontal_bias="0.388"
         app:layout_constraintStart_toEndOf="@+id/view2"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.35" />
@@ -88,12 +87,12 @@
         android:background="@drawable/round_corners"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.3"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintHorizontal_bias="0.287"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view3"
-        app:layout_constraintVertical_bias="0.497"
-        app:layout_constraintWidth_percent="0.9" />
+        app:layout_constraintTop_toBottomOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.291"
+        app:layout_constraintWidth_percent="0.35" />
 
     <Button
         android:id="@+id/history"
@@ -104,11 +103,12 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/note"
-        app:layout_constraintVertical_bias="0.345"
-        app:layout_constraintWidth_percent="0.8"
+        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintHorizontal_bias="0.409"
+        app:layout_constraintStart_toEndOf="@+id/view4"
+        app:layout_constraintTop_toBottomOf="@+id/view3"
+        app:layout_constraintVertical_bias="0.737"
+        app:layout_constraintWidth_percent="0.3"
         tools:ignore="VisualLintButtonSize" />
 
     <Button
@@ -128,32 +128,35 @@
         android:id="@+id/note"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="4dp"
         android:autoSizeTextType="uniform"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/enter_note"
         android:inputType="textMultiLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.23"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view4"
+        app:layout_constraintEnd_toEndOf="@+id/view4"
+        app:layout_constraintHeight_percent="0.38"
+        app:layout_constraintHorizontal_bias="0.413"
+        app:layout_constraintStart_toStartOf="@+id/view4"
         app:layout_constraintTop_toBottomOf="@+id/textNote"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintWidth_percent="0.3" />
 
     <CheckBox
         android:id="@+id/economy"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
-        android:autoSizeMaxTextSize="24sp"
+        android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
         android:text="@string/economy"
         app:layout_constraintEnd_toEndOf="@+id/view3"
-        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintHeight_percent="0.12"
         app:layout_constraintHorizontal_bias="0.116"
         app:layout_constraintStart_toStartOf="@+id/view3"
         app:layout_constraintTop_toBottomOf="@+id/delType"
-        app:layout_constraintWidth_percent="0.11" />
+        app:layout_constraintWidth_percent="0.15" />
 
     <TextView
         android:id="@+id/delType"
@@ -165,43 +168,44 @@
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintHorizontal_bias="0.186"
+        app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="@+id/view3"
         app:layout_constraintTop_toTopOf="@+id/view3"
-        app:layout_constraintVertical_bias="0.135"
+        app:layout_constraintVertical_bias="0.08"
         app:layout_constraintWidth_percent="0.2" />
-
-    <CheckBox
-        android:id="@+id/superfast"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:autoSizeMaxTextSize="30sp"
-        android:autoSizeTextType="uniform"
-        android:text="@string/superfast"
-        app:layout_constraintBottom_toBottomOf="@+id/view3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.06"
-        app:layout_constraintHorizontal_bias="0.261"
-        app:layout_constraintStart_toEndOf="@+id/economy"
-        app:layout_constraintTop_toTopOf="@+id/view3"
-        app:layout_constraintVertical_bias="0.551"
-        app:layout_constraintWidth_percent="0.115" />
 
     <CheckBox
         android:id="@+id/fast"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="4dp"
-        android:autoSizeMaxTextSize="30sp"
+        android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
         android:text="@string/fast"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.12"
+        app:layout_constraintHorizontal_bias="0.234"
+        app:layout_constraintStart_toEndOf="@+id/economy"
+        app:layout_constraintTop_toTopOf="@+id/view3"
+        app:layout_constraintVertical_bias="0.379"
+        app:layout_constraintWidth_percent="0.14" />
+
+    <CheckBox
+        android:id="@+id/standard"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeTextType="uniform"
+        android:text="@string/standard"
+        app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toEndOf="@+id/view3"
-        app:layout_constraintHeight_percent="0.06"
-        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintHeight_percent="0.12"
+        app:layout_constraintHorizontal_bias="0.085"
         app:layout_constraintStart_toStartOf="@+id/view3"
         app:layout_constraintTop_toBottomOf="@+id/economy"
-        app:layout_constraintWidth_percent="0.07" />
+        app:layout_constraintVertical_bias="0.117"
+        app:layout_constraintWidth_percent="0.08" />
 
     <TextView
         android:id="@+id/textNote"
@@ -211,11 +215,11 @@
         android:autoSizeTextType="uniform"
         android:text="@string/noteText"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.04"
-        app:layout_constraintHorizontal_bias="0.153"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/view4"
+        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintStart_toStartOf="@+id/view4"
         app:layout_constraintTop_toTopOf="@+id/view4"
-        app:layout_constraintWidth_percent="0.35" />
+        app:layout_constraintWidth_percent="0.15" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
