--- a/app/src/main/res/layout/create_delivery.xml
+++ b/app/src/main/res/layout/create_delivery.xml
@@ -83,6 +83,7 @@
         android:hint="@string/enter_receivID"
         android:importantForAutofill="no"
         android:inputType="text"
+        android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintHeight_percent="0.065"
@@ -113,7 +114,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
-        android:autoSizeTextType="uniform"
+        android:textSize="19sp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/enter_note"
@@ -125,14 +126,15 @@
         app:layout_constraintStart_toStartOf="@+id/view4"
         app:layout_constraintTop_toBottomOf="@+id/textNote"
         app:layout_constraintVertical_bias="0.333"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintWidth_percent="0.8"
+        android:importantForAutofill="no" />
 
     <TextView
         android:id="@+id/delType"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="12dp"
-        android:autoSizeTextType="uniform"
+        android:textSize="20sp"
         android:text="@string/delType"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/view3"
@@ -147,8 +149,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:autoSizeMaxTextSize="30sp"
-        android:autoSizeTextType="uniform"
+        android:textSize="19sp"
         android:text="@string/economy"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.055"
@@ -158,33 +159,31 @@
         app:layout_constraintWidth_percent="0.3" />
 
     <CheckBox
-        android:id="@+id/fast"
+        android:id="@+id/standard"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
-        android:autoSizeMaxTextSize="30sp"
-        android:autoSizeTextType="uniform"
-        android:text="@string/fast"
+        android:textSize="19sp"
+        android:text="@string/standard"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.055"
         app:layout_constraintHorizontal_bias="0.067"
         app:layout_constraintStart_toStartOf="@+id/view3"
         app:layout_constraintTop_toBottomOf="@+id/economy"
-        app:layout_constraintWidth_percent="0.18" />
+        app:layout_constraintWidth_percent="0.29" />
 
     <CheckBox
-        android:id="@+id/superfast"
+        android:id="@+id/fast"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
-        android:autoSizeMaxTextSize="30sp"
-        android:autoSizeTextType="uniform"
-        android:text="@string/superfast"
+        android:textSize="19sp"
+        android:text="@string/fast"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.055"
         app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="@+id/view3"
-        app:layout_constraintTop_toBottomOf="@+id/fast"
+        app:layout_constraintTop_toBottomOf="@+id/standard"
         app:layout_constraintWidth_percent="0.3" />
 
     <TextView
@@ -192,7 +191,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:autoSizeTextType="uniform"
+        android:textSize="20sp"
         android:text="@string/noteText"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/view4"
@@ -206,7 +205,7 @@
         android:id="@+id/textID"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:autoSizeTextType="uniform"
+        android:textSize="20sp"
         android:text="@string/enter_receivIDText"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
